sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:15: error: not found: value compteur
  setValeur(compteur,stock)
            ^AlgInsertionSort:15: error: not found: value stock
  setValeur(compteur,stock)
                     ^