sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n:Int=getNombreValeurs()
  for ( k <- 1 to (n-1)){
    var stock:Int=getValeur(k)
    var compteur:Int=k
    var l :Int=k-1
    var compa:Int=getValeur(l)
    while (compa>stock || l>=0){
      setValeur((l+1),compa)
      compteur=l
      l=l-1
    }
  }
  setValeur(compteur,stock)
}
           